--- a/ex1.html
+++ b/ex1.html
@@ -36,7 +36,7 @@
           <h1 class='text-center'>Exercise 1:</h1>
           <h2><f class="text-dark">Title: </f>Find the square of the sum</h2>
           <hr>  
-          <h4 class='text-left'>Find the square <strong>sr</strong> of the sum of  <strong>a</strong> that is array of numbers from the number <strong>n</strong> to 0 </h4>
+          <h4 class='text-left'>Find the square <strong>sr</strong> of the sum from <strong>n</strong> to 0 </h4>
           <h4 class='text-right'><a href="programs/first.cpp" download>Download the source code here</a></h4>
          <hr>
         </div>
