--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <title>Code Factory</title>
 </head>
 <body>
-    <nav class="navbar sticky-top navbar-expand-lg navbar-dark bg-dark text-light">
+    <nav class="navbar sticky-top navbar-expand-lg navbar-dark bg-dark text-light navbar-fixed-top">
         <img src="https://lh3.googleusercontent.com/a-/AOh14GiRfctjqvedFyQnl9PPeYPsRQLOtk3JEXrmNeioTg=s600-k-no-rp-mo" style="width: 50px; height: 50px; margin: 0; padding: 0;  margin-right:5px;">
         <a class="navbar-brand">Polclard's Code Factory</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -80,7 +80,7 @@
 
       <div>
         <!-- Footer -->
-        <footer class="text-center text-dark-start bg-dark text-muted text-white">
+        <footer class="text-center text-dark-start bg-dark text-muted text-white" id="ftr">
             <!-- Section: Social media -->
             <section
               class="d-flex justify-content-center justify-content-lg-between p-4 border-bottom"
@@ -185,9 +185,12 @@
               © 2021 Copyright:
               <h4>Polclard</h4>
               <h4><img src="https://lh3.googleusercontent.com/a-/AOh14GiRfctjqvedFyQnl9PPeYPsRQLOtk3JEXrmNeioTg=s600-k-no-rp-mo"></h4>
+              <!--<button style="background-color: rgba(0,0,0,0); border: 0px;"; onclick="darkTheme()" ><img src="images/moon.png" style="width: 20px; height: 20px;"></button>
+              <button style="background-color: rgba(0,0,0,0); border: 0px;"; onclick="lightTheme()" ><img src="images/sun.png" style="width: 20px; height: 20px;"></button>
+              -->
             </div>
           </footer>
-        </div>
+       </div>
 </body>
 <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
