--- a/ex2.html
+++ b/ex2.html
@@ -33,17 +33,40 @@
       </nav>
 
       <div>
-          <h1 class='text-center'>Exercise 1:</h1>
-          <h2><f class="text-dark">Title: </f>Find the square of the sum</h2>
+          <h1 class='text-center'>Exercise 2:</h1>
+          <h2><f class="text-dark">Title: </f>Path Finder</h2>
           <hr>  
-          <h4 class='text-left'>Find the square <strong>sr</strong> of the sum from <strong>n</strong> to 0 </h4>
-          <h3 class='text-right'><a href="programs/first.cpp" download>Download the source code here</a></h3>
+          <h4 class='text-left'>Find the movement pattern for <strong>'P'</strong> to get to <strong>'X'.</strong><br>You need to write how much fields should <strong>'P'</strong> needs to move <strong>Up, Down, Left or Right</strong> to get to 'X'</h4>
+          <br>
+          <h4>Example:</h4>
+          <br>
+          <h4>  Up: 0<br>
+                Down: 8<br>
+                Left: 0<br>
+                Right: 8<br>
+                <br>
+            P - - - - - - - - - <br> 
+            - - - - - - - - - - <br>
+            - - - - - - - - - - <br>
+            - - - - - - - - - - <br>
+            - - - - - - - - - - <br>
+            - - - - - - - - - - <br>
+            - - - - - - - - - - <br>
+            - - - - - - - - - - <br>
+            - - - - - - - - X - <br>
+            - - - - - - - - - -<br></h4>
+            <br>
+            <h4>Explanation:<br><strong>'P'</strong> needs to go <strong>Down: 8</strong> fields, and than it needs to go <strong>Right: 8 </strong>fields.</h4>
+          <h3 class='text-right'><a href="programs/second.py" download>Download the source code here</a></h3>
+         <hr>
+         <h3>Comment:</h3>
+         <p>Sorry that I am diverting from C++, but this is cool Exercise to show you.</p>
          <hr>
         </div>
 
 
       <div style="margin: 10px;">
-        <iframe frameborder="0" width="100%" height="800px" src="https://replit.com/@alenjang007/SquareNumber?lite=true"></iframe>
+        <iframe frameborder="0" width="100%" height="800px" src="https://replit.com/@alenjang007/PathFinder?lite=true"></iframe>
       </div>
 
 
