--- a/exercises.html
+++ b/exercises.html
@@ -39,7 +39,7 @@
           <div class="col-sm">
             <div style="width: 100%; height: auto; background-color: #343a40; margin-right: 10px; margin-top: 10px;">
             <h3 style="text-align: center; color: white;">Exercise 1</h3>
-            <h5 class="text-white text-center"><f class="text-success">Title:</f> Square of the sum</h5>
+            <h5 class="text-white text-center"><f class="text-success">Title: </f>Square of the sum</h5>
             <p style="text-align: center; color: white;">Link to Compiler-> <a href="ex1.html" target="_blank"><img style="width: 30px; height: 30px; margin: 4px;" src="https://cdn-icons-png.flaticon.com/512/643/643378.png"></a></p>
             </div>
           </div>
@@ -47,28 +47,12 @@
         <div class="row">
           <div class="col-sm">
             <div style="width: 100%; height: auto; background-color: #343a40; margin-right: 10px; margin-top: 10px;">
-            <h3 style="text-align: center; color: white;">Exercise 1</h3>
-            <h5 class="text-white text-center"><f class="text-success">Title:</f> Square of the sum</h5>
-            <p style="text-align: center; color: white;">Link to Compiler-> <a href="ex1.html" target="_blank"><img style="width: 30px; height: 30px; margin: 4px;" src="https://cdn-icons-png.flaticon.com/512/643/643378.png"></a></p>
+            <h3 style="text-align: center; color: white;">Exercise 2</h3>
+            <h5 class="text-white text-center"><f class="text-success">Title: </f>Path Finder</h5>
+            <p style="text-align: center; color: white;">Link to Compiler-> <a href="ex2.html" target="_blank"><img style="width: 30px; height: 30px; margin: 4px;" src="https://cdn-icons-png.flaticon.com/512/643/643378.png"></a></p>
             </div>
           </div>
         </div>
-        <div class="row">
-          <div class="col-sm">
-            <div style="width: 100%; height: auto; background-color: #343a40; margin-right: 10px; margin-top: 10px;">
-            <h3 style="text-align: center; color: rgb(255, 255, 255);">Exercise 1</h3>
-            <h5 class="text-white text-center"><f class="text-success">Title:</f> Square of the sum</h5>
-            <p style="text-align: center; color: white;">Link to Compiler-> <a href="ex1.html" target="_blank"><img style="width: 30px; height: 30px; margin: 4px;" src="https://cdn-icons-png.flaticon.com/512/643/643378.png"></a></p>
-            </div>
-          </div>
-        </div>
-        <div class="row">
-          <div class="col-sm">
-            <div style="width: 100%; height: auto; background-color: #343a40; margin-right: 10px; margin-top: 10px;">
-            <h3 style="text-align: center; color: white;">Exercise 1</h3>
-            <h5 class="text-white text-center"><f class="text-success">Title:</f> Square of the sum</h5>
-            <p style="text-align: center; color: white;">Link to Compiler-> <a href="ex1.html" target="_blank"><img style="width: 30px; height: 30px; margin: 4px;" src="https://cdn-icons-png.flaticon.com/512/643/643378.png"></a></p>
-            </div>
           </div>
         </div>
         <hr>
