--- a/ex2.html
+++ b/ex2.html
@@ -36,27 +36,32 @@
           <h1 class='text-center'>Exercise 2:</h1>
           <h2><f class="text-dark">Title: </f>Path Finder</h2>
           <hr>  
-          <h4 class='text-left'>Find the movement pattern for <strong>'P'</strong> to get to <strong>'X'.</strong><br>You need to write how much fields should <strong>'P'</strong> needs to move <strong>Up, Down, Left or Right</strong> to get to 'X'</h4>
+          <h4 class='text-left'>Find the movement pattern for <strong>'P'</strong> to get to <strong>'X'.</strong><br>You need to write how much fields should <strong>'P'</strong> needs to move <strong>Up, Down, Left or Right</strong> to get to 'X'.</h4>
           <br>
           <h4>Example:</h4>
           <br>
-          <h4>  Up: 0<br>
-                Down: 8<br>
-                Left: 0<br>
-                Right: 8<br>
-                <br>
-            P - - - - - - - - - <br> 
-            - - - - - - - - - - <br>
-            - - - - - - - - - - <br>
-            - - - - - - - - - - <br>
-            - - - - - - - - - - <br>
-            - - - - - - - - - - <br>
-            - - - - - - - - - - <br>
-            - - - - - - - - - - <br>
-            - - - - - - - - X - <br>
-            - - - - - - - - - -<br></h4>
-            <br>
-            <h4>Explanation:<br><strong>'P'</strong> needs to go <strong>Down: 8</strong> fields, and than it needs to go <strong>Right: 8 </strong>fields.</h4>
+           <div class="ex2-st">
+                <h4>  Up: 0<br>
+                        Down: 8<br>
+                        Left: 0<br>
+                        Right: 8<br>
+                        <br>
+                    P - - - - - - - - - <br> 
+                    - - - - - - - - - - <br>
+                    - - - - - - - - - - <br>
+                    - - - - - - - - - - <br>
+                    - - - - - - - - - - <br>
+                    - - - - - - - - - - <br>
+                    - - - - - - - - - - <br>
+                    - - - - - - - - - - <br>
+                    - - - - - - - - X - <br>
+                    - - - - - - - - - -<br>
+                    <br>
+                </h4>
+            </div>
+
+
+            <h4>Explanation:<br><strong>'P'</strong> needs to go <strong>Down: 8</strong> fields, and then it needs to go <strong>Right: 8 </strong>fields.</h4>
           <h3 class='text-right'><a href="programs/second.py" download>Download the source code here</a></h3>
          <hr>
          <h3>Comment:</h3>
